# mipt-algo2017-ray-tracing

./: CMakeLists.txt  README.md
models/rt_examples/: rc5.rt
source/: main.cpp
source/geometry/: BoundingBox.cpp  BoundingBox.h  GeomFloat.h  Point.cpp  Point.h  Quadrangle.cpp  Quadrangle.h  Ray.cpp  Ray.h  Sphere.cpp  Sphere.h  Surface.cpp  Surface.h  Triangle.cpp  Triangle.h  Vector.cpp  Vector.h
source/graphics/: GraphColor.cpp  GraphColor.h  GraphMaterial.cpp  GraphMaterial.h  GraphMaterialFactory.cpp  GraphMaterialFactory.h  GraphQuadrangle.cpp  GraphQuadrangle.h  GraphScene.cpp  GraphScene.h  GraphScreen.cpp  GraphScreen.h  GraphSphere.cpp  GraphSphere.h  GraphTriangle.cpp  GraphTriangle.h  IGraphObject.cpp  IGraphObject.h  Illuminant.cpp  Illuminant.h  KDNode.cpp  KDNode.h  KDTree.cpp  KDTree.h
source/parsers/: ISceneParser.h  ParserObj.cpp  ParserObj.h  ParserRT.cpp  ParserRT.h  RTFileParser.h  RT_file.h  Scanner.h  parserObj.cpp  parserObj.h
